--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@
       <div
         class="bg-orange-400 max-w-[1220px] m-auto bg-opacity-70 rounded-2xl md:p-4 p-2 border-[3px] border-white"
       >
-        <img class="min-w-full btn-animation" src="Image/button-2.png" alt="" />
+        <a href="">
+          <img
+            class="min-w-full btn-animation"
+            src="Image/button-2.png"
+            alt=""
+          />
+        </a>
       </div>
     </section>
 
