--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
         <img class="w-full" src="Image/image-1.jpg" alt="" />
       </div>
       <div class="max-w-[1000px] m-auto px-2">
-        <a href="https://works.do/R/ti/p/223322@works-589601"
-          ><img class="w-full" src="Image/button-1.webp" alt=""
-        /></a>
+        <a href=""><img class="w-full" src="Image/button-1.webp" alt="" /></a>
       </div>
       <div>
         <img class="w-full" src="Image/image-2.jfif" alt="" />
@@ -37,7 +35,7 @@
       <div
         class="bg-orange-400 max-w-[1220px] m-auto bg-opacity-70 rounded-2xl md:p-4 p-2 border-[3px] border-white"
       >
-        <a href="https://works.do/R/ti/p/223322@works-589601">
+        <a href="">
           <img
             class="min-w-full btn-animation"
             src="Image/button-2.png"
